--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,9 @@ pydantic-settings = "^2.6.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 pytest-cov = "^6.1.1"
+flake8 = "^7.1.1"
+black = "^24.8.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.pytest.ini_options]
-pythonpath = "app"
