--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic-settings = "^2.6.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 pytest-cov = "^6.1.1"
+moto = "^5.0.0"
 flake8 = "^7.1.1"
 black = "^24.8.0"
 
