Poetry + Docker で開発環境構築

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,14 @@ services:
     command: tail -f /dev/null
     depends_on:
       - localstack
+    env_file:
+      - .env
     environment:
       - PYTHONPATH=/app
 
   localstack:
     image: localstack/localstack:3.3
     environment:
-      - SERVICES=s3
+      - SERVICES=s3,sqs
     ports:
       - "4566:4566"
