--- a/Dockerfiles/Dockerfile.dev
+++ b/Dockerfiles/Dockerfile.dev
@@ -1,14 +1,13 @@
-FROM python:3.13-slim
+FROM python:3.12-slim
 
 # 作業ディレクトリを作成
 WORKDIR /app
 
-# 依存関係のインストール
-COPY pyproject.toml ./
+# Poetry設定とpoetry.lockをコピー
+COPY pyproject.toml poetry.lock ./
 
 RUN pip install --upgrade pip \
  && pip install poetry \
- && poetry lock \
  && poetry install --no-root
 
 # アプリケーションのコードをコピー
