--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,20 @@ pytest = "^8.2.0"
 pytest-cov = "^6.1.1"
 flake8 = "^7.1.1"
 black = "^24.8.0"
+isort = "^5.13.2"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+known_first_party = ["app"]
+
+[tool.black]
+line-length = 88
+target-version = ['py312']
 
 [build-system]
 requires = ["poetry-core"]
